visited instance detection + fix build