@@ -6,16 +6,45 @@
 
     <groupId>ru.aemmie</groupId>
     <artifactId>cycle</artifactId>
-    <version>1.0</version>
+    <version>3.2.0a</version>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>ru.aemmie.cycle.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.4.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <shadedArtifactAttached>true</shadedArtifactAttached>
+                    <shadedClassifierName>fat</shadedClassifierName>
                 </configuration>
             </plugin>
         </plugins>
@@ -64,17 +93,23 @@
             <version>1.0.2</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.ocpsoft.prettytime</groupId>
-            <artifactId>prettytime</artifactId>
-            <version>5.0.6.Final</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.ocpsoft.prettytime</groupId>-->
+<!--            <artifactId>prettytime</artifactId>-->
+<!--            <version>5.0.6.Final</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>31.1-jre</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.github.kwhat</groupId>-->
+<!--            <artifactId>jnativehook</artifactId>-->
+<!--            <version>2.2.2</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.jetbrains</groupId>
@@ -83,5 +118,6 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
 
 </project>
